microservices/scavenger-microservice/openshift/route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: scavenger-hunt-microservice
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: scavenger-hunt-microservice
  tls:
    termination: edge
---
apiVersion: v1
kind: Route
metadata:
  name: scavenger-hunt-microservice-rh
spec:
  host: redhatkeynote.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: scavenger-hunt-microservice
  tls:
    termination: edge
---
apiVersion: v1
kind: Route
metadata:
  name: scavenger-hunt-microservice-www-rh
spec:
  host: www.redhatkeynote.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: scavenger-hunt-microservice
  tls:
    termination: edge
